--- a/index.html
+++ b/index.html
@@ -3,39 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HYDROBLT</title>
+  <title>Ringke Landing Page</title>
   <link rel="stylesheet" href="main.css">
 </head>
-<body>
-  <section>
-    <div class="text-block">
-        <h1>Recovery</h1>
-    </div>
-    <div class="text-block">
-        <h1>Hydration</h1>
-    </div>
-    <div class="text-block">
-        <h1>20 grams of protein</h1>
-    </div>
-    <div class="text-block">
-        <h1>Packed in one tinny shot</h1>
-    </div>
-    <div class="product-title">
-        <h1>HYDROBLT</h1>
-    </div>
+<body class="rklp">
+  <section class="rklp_flex_c rklp_section rklp_title">
+    <h1 class="rklp_flex_c"> BROWSE OUR FEATURED PRODUCTS</h1>
   </section>
 
-  <section>
-    <form class="waiting-list-form">
-      <h2>Join the Waiting List</h2>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
-      
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-      
-      <button type="submit">Join Now</button>
-    </form>
+  <section class="rklp_flex_c rklp_section">
+    <div class="rklp_grid">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+    </div>
   </section>
 </body>
 </html>
