--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body class="rklp">
+
   <section class="rklp_flex_c rklp_section rklp_title">
-    <h1 class="rklp_flex_c"> BROWSE OUR FEATURED PRODUCTS</h1>
+  <div class="rklp_flex_sa rklp_flex_col rklp_title_container">
+    <h1>BROWSE OUR FEATURED PRODUCTS</h1>
+    <div class="rklp_page_arrow">&#x2193;</div>
+  </div>
   </section>
 
   <section class="rklp_flex_c rklp_section">
