--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <section class="rklp_flex_c rklp_section">
     <div class="rklp_grid">
-      <div>1</div>
+      <div href="/landing/bezelStyling.html">1</div>
       <div>2</div>
       <div>3</div>
       <div>4</div>
